; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_diff_print.c_git_patch_to_buf.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_diff_print.c_git_patch_to_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@git_diff_print_callback__to_buf = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_patch_to_buf(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i32*, i32** %4, align 8
  %9 = icmp ne i32* %8, null
  br label %10

10:                                               ; preds = %7, %2
  %11 = phi i1 [ false, %2 ], [ %9, %7 ]
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert(i32 %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @git_buf_sanitize(i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @git_diff_print_callback__to_buf, align 4
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @git_patch_print(i32* %16, i32 %17, i32* %18)
  ret i32 %19
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @git_buf_sanitize(i32*) #1

declare dso_local i32 @git_patch_print(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
